--- a/Index.html
+++ b/Index.html
@@ -8,10 +8,13 @@
         margin-left: auto;
         margin-right: auto;
             }
-
     </style>
-
-<img src="" width="">
+<head>
+    <title>Image</title>
+</head>
+<body>
+    <img src= C:\Users\john\OneDrive\Desktop\MEE.jpg width="200">
+</body>
 
 <h2 style="text-align:center">REYES, JOHN EMMANUEL</h2>
 <h2 style="text-align:center">Metro Manila, Caloocan City</h2>
